# PothosFEC

./: .gitmodules  CMakeLists.txt  Changelog.txt  README.md
AFF3CTDynamic/: AFF3CTDynamic.json  BCHCodec.cpp  BCHCodec.hpp  BCHDecoder.cpp  BCHDecoder.hpp  BCHDecoderFactory.cpp  BCHDecoderFactory.hpp  CMakeLists.txt  CRCFactory.cpp  CRCFactory.hpp  CRCPolynomialInter.cpp  CRCPolynomialInter.hpp  EntryPoints.cpp  EntryPoints.hpp  LDPCCodec.cpp  LDPCCodec.hpp  LDPCDecoderBPHorizontalLayeredONMSInter.cpp  LDPCDecoderBPHorizontalLayeredONMSInter.hpp  LDPCDecoderFactory.cpp  LDPCDecoderFactory.hpp  LDPCEncoderFactory.cpp  LDPCEncoderFactory.hpp  LDPCEncoderFromQC.cpp  LDPCEncoderFromQC.hpp  LDPCMatrixHandler.cpp  LDPCMatrixHandler.hpp  PolarCodec.cpp  PolarCodec.hpp  PolarDecoderFactory.cpp  PolarDecoderFactory.hpp  PolarDecoderGenFactory.cpp  RACodec.cpp  RACodec.hpp  RADecoder.cpp  RADecoder.hpp  RADecoderFactory.cpp  RADecoderFactory.hpp  RepetitionCodec.cpp  RepetitionCodec.hpp  RepetitionDecoder.cpp  (+6 more)
Scripts/: GenConvolutionDocs.py
Source/: AZCWEncoder.cpp  BitErrorRate.cpp  ConvCodes.c  ConvCodes.h  ConvCommon.cpp  ConvCommon.hpp  Convolution.cpp  ConvolutionBase.cpp  ConvolutionBase.hpp  ConvolutionDocs.cpp  ConvolutionalEncoder.cpp  ConvolutionalEncoderBase.cpp  ConvolutionalEncoderBase.hpp  GenericConvolution.cpp  GenericConvolutionBase.cpp  GenericConvolutionBase.hpp  GenericConvolutionalEncoder.cpp  LTEConvEncoder.cpp  LTETurboDecoder.cpp  LTETurboEncoder.cpp  ModuleInfo.cpp.in  ReedSolomonCoders.cpp  ReedSolomonRAII.hpp  StandardConvolution.cpp  StandardConvolutionalEncoders.cpp  Utility.cpp  Utility.hpp
Source/AFF3CT/: BCHCoders.cpp  CoderBase.cpp  CoderBase.hpp  LDPCCoders.cpp  PolarCoders.cpp  RACoders.cpp  RepetitionCoders.cpp  TypeTraits.hpp
Testing/: CoderTests.cpp  CoderTests.hpp  TestAFF3CTCoders.cpp  TestBitErrorRate.cpp  TestConvolution.cpp  TestLTETurboCoders.cpp  TestModuleInfo.cpp  TestStandardConvolutionalEncoders.cpp  TestUtility.cpp  TestUtility.hpp
cmake/: BuildLibFEC.cmake  BuildTurboFEC.cmake  FindLibFEC.cmake  FindTurboFEC.cmake
